# Pytorch_Snowflake

./: .gitignore  PYTORCH_DEMO_LOCAL.ipynb  README.md  pyproject.toml  pytorch_snowflake_distributed_training.ipynb  pytorch_training_framework_tutorial.ipynb  test_notebook_functionality.py  tfh_train-1.0.0-py3-none-any.whl
conda/: environment_dev.yml
src/tfh_train/: __init__.py  constants.py
src/tfh_train/commands/: evaluate.py  train.py
src/tfh_train/commands/configs/: evaluate.yaml  train.yaml
src/tfh_train/commands/configs/callbacks/: batch_size_finder.yaml  default.yaml  device_stats.yaml  early_stopping.yaml  lr_finder.yaml  lr_monitor.yaml  model_checkpoint.yaml
src/tfh_train/commands/configs/data_module/cifar_clf/: clf_dataset.yaml
src/tfh_train/commands/configs/debugging/: default.yaml  fast_dev_run.yaml  overfit_batches.yaml  profiler.yaml
src/tfh_train/commands/configs/experiment/cifar_clf/: cifar_clf_training.yaml
src/tfh_train/commands/configs/hparams_search/eye_segmentation/: smp_unet_lr_sweep.yaml
src/tfh_train/commands/configs/hydra/: default.yaml
src/tfh_train/commands/configs/loggers/: default.yaml  mlflow.yaml  tensorboard.yaml
src/tfh_train/commands/configs/model_module/cifar_clf/: clf_model.yaml
src/tfh_train/commands/configs/paths/: default.yaml
src/tfh_train/commands/configs/trainer/: ddp.yaml  default.yaml
src/tfh_train/model_zoo/cifar_clf/: data_module.py  model.py  model_module.py
src/tfh_train/model_zoo/common/: base_lightning_model_module.py
src/tfh_train/utils/: hydra_common.py  logging.py  metrics_collection_wrapper.py
